Changes in 3.9.7

1)  Clean up release notes.

2)  Fix several bugs having to do with exclusion in the hosts file.

3)  Use '-m addrtype' in detectnet interface output rules.

4)  Fix find_hosts_by_option().

5)  Fix more hosts file bugs.

Changes in 3.9.6

1)  Fix parsing problems in protocol handling.

2)  Fix bugs in handling of the MARK column.

3)  Fix bug in routing table copying

4)  Fix bug in ipset handling.

5)  Fix bug in handling of CONTINUE in the tcrules file.

6)  Add RCP_COMMAND and RSH_COMMAND options in shorewall.conf

7)  Apply Luigi's MARK patch.

Changes in 3.9.5

1)  Fix dynamic zone problem.

2)  Fix LOGALLNEW.

3)  Implement log level, protocol and port validation.

4)  Fix MACLIST log rule generation problem.

Changes in 3.9.4

1)  Fix port 0 problem (again!).

2)  Fix log_martians.

3)  Make LOG_MARTIANS and ROUTE_FILTER tri-valued.

4)  Fix arp_ignore.

5)  Re-work ROUTE_FILTER and LOG_MARTIANS.

6)  Fix handling of interface options.

7)  Fix handling of zone ipsec options.

8)  Fix 'routeback' on multi-zone interface.

9)  Fix 'check -d'.

10) Fix intra-zone policies.

11) Fix typo in maclist validation.

12) Allow 'optional' to work with 'maclist'.

Changes in 3.9.3

1)  Apply Steven Springl's patch for port checking.

2)  Implement 'optional' interface option.

3)  Fix a couple of bugs in 'owner' handling.

4)  Fix several bugs in address/network detection.

5)  Make a number of interface options binary.

6)  Add wildcard edits in interface processing.

7)  Fix dropInvalid.

8)  Fix 'none'.

9)  Fix SAME with SOURCE $FW

10) Fix tcp:syn.

11) Fix all->z rules with 'NONE' policy.

12) Check for reserved zone names.

13) Add check for firewall zone existance.

14) Add checks for zone existance in 'all' processing.

Changes in 3.9.2

1)  Implement '-C {shell|perl}'.

2)  Implement LOCKFILE

3)  Fix typo in prog.footer.

4)  Fix Shorewall-perl hosts and tcclasses errors.

5)  Add IPPserver macro.
