@@ -37,6 +37,9 @@ Problems corrected in 3.9.7.
     -   -A eth0_fwd -s 192.168.0.0/24-m policy --dir in --pol ipsec -j 
 	HASH(0x8345924)->n{name} 
 
+4)  A value of 'detect' in the GATEWAY column of the providers file no
+    longer generates an error during [re]start.
+
 Other changes in Shorewall 3.9.6.
 
 None.
