@@ -10,6 +10,8 @@ Changes in 3.9.7
 
 5)  Fix more hosts file bugs.
 
+6)  Fix 'detect' in GATEWAY column of providers file.
+
 Changes in 3.9.6
 
 1)  Fix parsing problems in protocol handling.
